--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "help": "^3.0.2",
     "splitpanes": "^2.2.1",
     "vue": "^2.6.11",
+    "vue-friendly-iframe": "^0.18.0",
     "vue-multipane": "^0.9.5",
     "vue-plugin-load-script": "^1.3.2",
     "vue-splitpane": "^1.0.6",
